# WPT-adjustment-turtlebot

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py  start_alignment.sh  start_bringup.sh
config/: wpt_alignment.yaml
docs/: algorithm.md  apriltag_plan.md  calibration.md
scripts/: camera_grid_alignment.py  camera_live_view.py  check_camera_alignment.py  drive_between_coils.py  drive_to_shelf.py  generate_tag_sheet.py  macs_bridge.py  server_agent.py
test/: test_coil_transit.py  test_command_blending.py  test_controller_math.py  test_generate_tag_sheet.py  test_global_map.py  test_global_map_config.py  test_global_route_control.py  test_line_detection.py  test_line_tracing.py  test_macs_link.py  test_map_homography.py  test_map_localization.py  test_map_pose_ekf.py  test_navigation_logging_contract.py  test_navigation_performance_logging.py  test_process_group_cleanup.py  test_process_group_isolation.py  test_route_marker_guidance.py  test_run_logging.py  test_script_dry_run_switch.py  test_script_line_endings.py  test_sensor_fusion.py  test_server_client.py  test_shelf_layout.py  test_shutdown_contract.py  test_start_scripts.py  test_tag_navigation.py  test_undershoot_alignment.py  test_wpt_alignment_node_undershoot.py
wpt_adjustment_turtlebot/: __init__.py  coil_transit.py  controller_math.py  global_map.py  global_map_navigation.py  global_route_control.py  line_detection.py  line_tracing.py  macs_link.py  map_localization.py  run_logging.py  sensor_fusion.py  server_client.py  shelf_layout.py  tag_layout.py  tag_navigation.py  (+1 more)
(+5 files in other folders)
